--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,17 +40,30 @@ winapi = { version = "0.3.9", features = ["winuser","processthreadsapi","winbase
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 headcrab_inject = { path = "./headcrab_inject" }
-imgui = "0.5.0"
-imgui-glium-renderer = "0.5.0"
-imgui-winit-support = "0.5.0"
-glium = "0.27.0"
-clipboard = "0.5.0"
+#imgui = "0.5.0"
+#imgui-glium-renderer = "0.5.0"
+#imgui-winit-support = "0.5.0"
+#glium = "0.27.0"
+#clipboard = "0.5.0"
 
 [dev-dependencies]
 rustyline = "6.2.0"
 repl_tools = { path = "./repl_tools" }
+rustc_codegen_cranelift = { path = "../cg_clif3" }
 
 [features]
 syntax-highlighting = ["syntect"]
 
 [workspace]
+
+[patch.crates-io]
+"cranelift-codegen" = { git = 'https://github.com/bytecodealliance/wasmtime/', branch = "main" }
+"cranelift-reader" = { git = 'https://github.com/bytecodealliance/wasmtime/', branch = "main" }
+"cranelift-module" = { git = 'https://github.com/bytecodealliance/wasmtime/', branch = "main" }
+
+[patch."https://github.com/bytecodealliance/wasmtime/"]
+cranelift-codegen = { path = "../wasmtime/cranelift/codegen" }
+cranelift-frontend = { path = "../wasmtime/cranelift/frontend" }
+cranelift-module = { path = "../wasmtime/cranelift/module" }
+cranelift-simplejit = { path = "../wasmtime/cranelift/simplejit" }
+cranelift-object = { path = "../wasmtime/cranelift/object" }
